@@ -25,11 +25,22 @@ $template_id = -1;
 if (isset($_GET["template_id"])) {
 
 	$template_id = $_GET["template_id"];
+	$template_name = "";
 	$userid = get_userid();
 	$access = check_permission($config, $userid, 'Remove Template');
 
 	if ($access) {
 		$db = new DB($config);
+
+		$query = "SELECT template_name FROM ".$config->db_prefix."templates WHERE template_id = ".$template_id;
+		$result = $db->query($query);
+
+		if ($db->rowcount($result) > 0) {
+			$row = $db->getresulthash($result);
+			$template_name = $row[template_name];
+		}
+
+		$db->freeresult($result);
 
 		$query = "SELECT count(*) AS count FROM ".$config->db_prefix."pages WHERE template_id = $template_id";
 		$result = $db->query($query);
@@ -42,6 +53,7 @@ if (isset($_GET["template_id"])) {
 		if ($dodelete) {
 			$query = "DELETE FROM ".$config->db_prefix."templates where template_id = $template_id";
 			$result = $db->query($query);
+			audit($config, $_SESSION["cms_admin_user_id"], $_SESSION["cms_admin_username"], $template_id, $template_name, 'Deleted Template');
 		}
 		$db->close();
 	}
